# completer

./: pyproject.toml
.devcontainer/: devcontainer.json
.vim/: coc-settings.json
complete/: __init__.py  completer.py  register_completer.py
fake_completers/: jif.py  nkit.py
tests/: test_complete.py  test_shell.py
