[tool.poetry]
name = "complete"
version = "0.1.0"
description = ""
authors = ["ankit <nnkitsaini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
shell_register = 'complete.register_completer:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

